fixed z-index

--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -47,7 +47,7 @@
   margin-top: auto;
   color: #fff;
   font-size: 60px;
-  z-index: 10;
+  z-index: 5;
 }
 
 @media screen and (min-width: 768px) {
