--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -111,6 +111,7 @@
   right: -100px;
   height: 120vh;
   overflow-y: auto;
+  z-index: 10;
   
   background: #ededed;
   list-style-type: none;
